epserde/tests/fail/where_clause.stderr
error: The derive macros do not support where clauses on the original type
  --> tests/fail/where_clause.rs:11:1
   |
11 | / where
12 | |     A: Eq,
   | |__________^
